--- a/2025.html
+++ b/2025.html
@@ -67,6 +67,19 @@
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
+
+                            <div class="img_container article_news__imgs">
+                 <figure class="img_container__part">
+                                <img src="./imgs/kristaboleslav.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                          
+                 <figure class="img_container__part">
+                                <img src="./imgs/luckaboleslav.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
                                 </div>
                          </article>
 
