--- a/2025.html
+++ b/2025.html
@@ -50,9 +50,11 @@
                 <h3 class="section_year__heading">2025</h3>
 
                    <article class="section_year__article article_news">
-                <h4 class="article_news__heading">Náš dlouho očekávaný přírůstek</h4>
+                <h4 class="article_news__heading">Hobby jezdecké závody Stará Boleslav - neděle 25.5.2025</h4>
                      
-                        <p class="article_news__text">V pondělí 12.5.2025 se nad ránem narodil Karole hřebeček. Všechno dobře dopadlo, hříbě i kobyla jsou v naprostém pořádku. </p> Jmenuje se Kornelius.  </p>
+                        <p class="article_news__text">V neděli jsme se vypravili do Staré Boleslavi. Pro některé z nás bylo toto závodiště novinkou, zkušenější Krista tam zavítala již po několikáté. 
+                            Zúčastnily jsme se parkurů 70/80 cm a 80/90 cm. Krista jela s Greenhornem a zapsala si náš nejlepší výsledek dne, protože v parkuru 80/90 cm byla na sedmém - posledním dekorovaném místě. 
+                            Dále se zúčastnily Lucka s Tedem, Verča s Dambarem a Majda se Sávou. Lucka a Verča dokončily oba parkury, Majda bohužel pro neposlušnost koně parkur nedokončila. </p>
 
                        
                       <div class="img_container article_news__imgs">
