--- a/tabor.html
+++ b/tabor.html
@@ -43,8 +43,7 @@
     <main id="tabor" class="main">
         <section class="section section_tabor">
             <h2  class="section__heading">Příměstský tábor</h2>
-            <p class="section__text">Naše jezdecká stáj Vydlákov pořádá každý rok příměstské tábory u koní. V tomto ročníku zbývá již jen pár volných míst v některých turnusech. 
-                Nečekejte s přihlášením na poslední chvíli!</p>  
+            <p class="section__text">Všechnu turnusy příměstských táborů na letošní léto jsou již plně obsazeny. Děkujeme za Váš zájem a s dětmi se těšíme na viděnou! </p>  
            
               <div class="section__img img_wrapper">
                  <figure class="img_container__part">
@@ -110,7 +109,7 @@
             </ul>
         </section>
         <section class="section section_tabor section--line">
-            <h3 class="section__heading section__heading--red">Turnusy 2024:</h3>
+            <h3 class="section__heading section__heading--red">Turnusy 2025:</h3>
             <ol class="section__list list_tabor order_list" start="">
                 <li class="order_list__item list_tabor__item">30.6. - 4.7.</li>
                 <li class="order_list__item list_tabor__item">7.7. - 11.7.</li>
