--- a/tabor.html
+++ b/tabor.html
@@ -47,7 +47,7 @@
            
               <div class="section__img img_wrapper">
                  <figure class="img_container__part">
-                                <img src="./imgs/TaborWA.jpg"
+                                <img src="./imgs/taborhistorie2.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
