--- a/2025.html
+++ b/2025.html
@@ -49,6 +49,14 @@
             <section class="section_year">
                 <h3 class="section_year__heading">2025</h3>
 
+                <article class="section_year__article article_news">
+                <h4 class="article_news__heading">Dětský den v sobotu 7.6.2025 </h4>
+                     
+                        <p class="article_news__text">V sobotu jsme pořádali další dětský den. Opět byl plný soutěží a ježdění na koních. Naše návštěvníky potěšil i Kornelius pobíháním po výběhu. 
+                            Počasí se naštěstí drželo. Děkujeme všem navštěvníkům i organizátorům, akce se povedla.
+                        </p> Fotogalerii na Zoneramě doplníme.  </p>
+
+
                    <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Hobby jezdecké závody Stará Boleslav - neděle 25.5.2025</h4>
                      
