--- a/sluzby.html
+++ b/sluzby.html
@@ -102,6 +102,18 @@
                             src="./imgs/pronajem_koni_B.jpg" alt="Manželská fotografie na louce, manželka oblečená v bílých šatech jede na koni z naši stáje JS Vydlákov"></a>
                     <figcaption></figcaption>
                 </figure>
+                   <figure class="section__img frame"><a class="img_wrapper"><img class="frame__item"
+                            src="./imgs/narozeniny1.jpg" alt="dětská oslava"></a>
+                    <figcaption></figcaption>
+                </figure>
+                   <figure class="section__img frame"><a class="img_wrapper"><img class="frame__item"
+                            src="./imgs/narozeniny2.jpg" alt="dětská oslava, vodění na poníkovi"></a>
+                    <figcaption></figcaption>
+                </figure>
+                   <figure class="section__img frame"><a class="img_wrapper"><img class="frame__item"
+                            src="./imgs/narozeniny3.jpg" alt="dětská oslava, vodění na poníkovi"></a>
+                    <figcaption></figcaption>
+                </figure>
             </section>
         </div>
     </main>
