--- a/2025.html
+++ b/2025.html
@@ -55,6 +55,10 @@
                         <p class="article_news__text">V sobotu jsme pořádali další dětský den. Opět byl plný soutěží a ježdění na koních. Naše návštěvníky potěšil i Kornelius pobíháním po výběhu. 
                             Počasí se naštěstí drželo. Děkujeme všem navštěvníkům i organizátorům, akce se povedla.
                         </p> Fotogalerii na Zoneramě doplníme.  </p>
+
+                     
+                         <p class="article_news__text">Za fotky děkujeme Kátě H. ( kackahartlova@seznam.cz ) </p>
+                        <a href="https://eu.zonerama.com/JSVydlakov1/Photo/13385291/538110220" class="prize_button prize_button--center">Fotky naleznete zde!</a>
                       
                       <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
