--- a/sluzby.html
+++ b/sluzby.html
@@ -98,6 +98,7 @@
                 <h3 class="section__heading section__heading--absolute">Pronájem koní</h3>
                 <p class="section__text section__text--border">Nabízíme pronájem koní k vyjížďkám /váhový limit 80kg/, na svatby, pro dětské oslavy apod. - po dohodě se správcem jízdárny.
                 </p>
+                <div class="">
                 <figure class="section__img frame"><a class="img_wrapper"><img class="frame__item"
                             src="./imgs/pronajem_koni_B.jpg" alt="Manželská fotografie na louce, manželka oblečená v bílých šatech jede na koni z naši stáje JS Vydlákov"></a>
                     <figcaption></figcaption>
@@ -114,6 +115,7 @@
                             src="./imgs/narozeniny3.jpg" alt="dětská oslava, vodění na poníkovi"></a>
                     <figcaption></figcaption>
                 </figure>
+                </div>
             </section>
         </div>
     </main>
