--- a/tabory2024.html
+++ b/tabory2024.html
@@ -44,7 +44,69 @@
         </header>
 
     <main id="tabory2024" class="main main_akce">
-        <h2 class="main__heading main_akce__heading ">Tábory 2024</h2>
+        <h2 class="main__heading main_akce__heading ">Tábory</h2>
+         <section id="2021" class="section_year">
+            <h3 class="section_year__heading">2025</h3>
+             <p class="section_year__text">Těšíme se na vás!</p>
+            <div class="section_article__wrapper">
+                <article class="section_year__article article_news">
+                    <h4 class="article_news__heading">Tábor - 8.7. - 12.7.</h4>
+                    <p class="article_news__text">Zítra to vypukne!! Bude nás 13 holek a starat se o nás budou Tína, Lucka a Eliška. </p>
+                     <p class="article_news__text">Náš tábor nás provede nejznámějšími odvětvími jezdeckého sportu. V pondělí jsme začaly voltiží, zkoušely jsme si voltižní cviky a i samostatně lonžovat jiné holky.        
+                                                 V úterý jsme na jízdárně pilovaly drezuru a 
+                                                 v dalších dnech nás čekají parkury, dostihy a parajezdectví. K tomu každý den všelijaké hry a ošetřování koní, i nezbytná práce okolo nich. </p>
+                                               
+                <div class="img_container img_container--center article_news__imgs">                             
+                <figure class="img_container__part">
+                                <img src="./akce_foto/IMG_20240708_081900.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                </div>
+                    <a href="https://eu.zonerama.com/JSVydlakovakce/Album/11685830" class="prize_button prize_button--center">Všechny fotky</a>
+                </article>
+                <article class="section_year__article article_news">
+                    <h4 class="article_news__heading">Tábor - 15.7. - 19.7.</h4>
+                    <p class="article_news__text">Náš turnus začal za letních veder a trochu tajemně.... zatím sbíráme body a vše se budeme dozvídat postupně. Naše průvodkyně jsou Krista s Verčou a je nás 8 holek. 
+                         <p class="article_news__text"> V pátek ráno jsme si užily na koních Zorro, Karola, Saul a Greenhorn první parkur v životě. Potom jsme šly hledat poklad a našly jsme spoustu sladkostí, dárečků a hlavně naši společnou fotku 
+                        na památku.  </p>
+                    <div class="img_container img_container--center article_news__imgs">  
+                        <figure class="img_container__part">
+                                <img src="./akce_foto/2024_tabor druhy turnus.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                    </div>
+                    <a href="https://eu.zonerama.com/JSVydlakovakce/Album/11685844" class="prize_button prize_button--center">Všechny fotky</a>
+                </article>
+                <article class="section_year__article article_news">
+                    <h4 class="article_news__heading">Tábor - 22.7. - 26.7.</h4>
+                    <p class="article_news__text">Znáte deskovou hru Z pohádky do pohádky? Tou se inspiruje tento turnus s Kristou a Rózou. Bude nás 6 holek a 1 kluk a cílem tábora bude
+                    dostat se z pohádek ven. </p>
+                     <p class="article_news__text">Nejdříve jsme vytvořili dva týmy - Šrádi a Koňský vydličky (ano, čtete dobře, vydličky). Plnili jsme spoustu úkolů, zdobili koně, kydali boxy, skákali parkur a za ně dostávali body.
+                     Prošli jsme celou pohádkou a vítězem se stal tým Šrádi.</p>
+                     <div class="img_container img_container--center article_news__imgs">                             
+                <figure class="img_container__part">
+                                <img src="./akce_foto/2024tabor3turnus.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                </div>
+                    <a href="https://eu.zonerama.com/JSVydlakovakce/Album/11685850" class="prize_button prize_button--center">Všechny fotky</a>
+                </article>
+                <article class="section_year__article article_news">
+                    <h4 class="article_news__heading">Tábor - 5.8. - 9.8.</h4>
+                     <p class="article_news__text">Zítra nás čeká poslední letošní turnus!! Bude nás 5 holek a starat se o nás bude Tína. Naším úkolem bude splnit spoustu úkolů a pomocníkem nám bude speciální mapa. </p>
+                     <p class="article_news__text">Každý den nás čekalo spoustu úkolů okolo koní a to nás bavilo nejvíc. Hodně jsme se toho naučili, zkoušeli jsme lonžovat, jezdili jsme, koně ošetřovali a věnovali se i teorii.
+                     <figure class="img_container__part">
+                                <img src="./akce_foto/2024_tabor4titulka.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                    <a href="https://eu.zonerama.com/JSVydlakovakce/Album/11685858" class="prize_button prize_button--center">Všechny fotky</a>
+                </article>
+            </div>
+        </section>
         <section id="2021" class="section_year">
             <h3 class="section_year__heading">2024</h3>
              <p class="section_year__text">Těšíme se na vás!</p>
