--- a/tabor.html
+++ b/tabor.html
@@ -52,9 +52,9 @@
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                           </div>
-            <p class="section__text">Podrobné informace i fotografie z minulých turnusů najdete zde: </p>
+            <p class="section__text">Podrobné informace i fotografie z probíhajících i minulých turnusů najdete zde: </p>
               <div class="year_box year_box--width">
-                <a href="./tabory2024.html#tabory2024" class="year_box__text">Tábory 2024</a>
+                <a href="./tabory2024.html#tabory2024" class="year_box__text">Info a foto tábory</a>
             </div>
             <p class="section__text">Fotky z minulých ročníků najdete zde:</p> 
                 <a href="https://jkvydlakov.rajce.idnes.cz/" class="prize_button prize_button--center">Více fotek zde!</a>
