--- a/kontakt.html
+++ b/kontakt.html
@@ -51,7 +51,7 @@
             <div class="contact_cards_wrapper">
                 <a href="tel:+420739550505" class="contact_wrapper">
                     <div class="section__item section__item--phone item_contact">
-                        <p class="item_contact__heading">Telefoní číslo</p>
+                        <p class="item_contact__heading">Telefonní číslo</p>
                         <p class="item_contact__text">+420 739 550 505</p>
                     </div>
                 </a>
