--- a/2025.html
+++ b/2025.html
@@ -49,6 +49,13 @@
             <section class="section_year">
                 <h3 class="section_year__heading">2025</h3>
 
+                  <article class="section_year__article article_news">
+                <h4 class="article_news__heading">Jezdecký den v Hnanicích - neděle 22.6.2025 </h4>
+                     
+                        <p class="article_news__text">V neděli jsme vyrazili na Jezdecký den do Hnanic. Hlavním účelem pro děvčata, která se chystají v létě na ZZVJ, bylo přejít si tréninkově parkur. 
+                            To dopadlo výborně, Johanka, Anetka a Nikča šly před ZZVJ každá dva parkury a doplnila je Majda. Z našich koní se zúčastnili Saul a Greenhorn a doplnili je poníci Rocky a Lord. 
+                        Každá z děvčat si odvezla mašli, Anetka dokonce dvě! </p>
+
                 <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Dětský den v sobotu 7.6.2025 </h4>
                      
