--- a/2025.html
+++ b/2025.html
@@ -71,7 +71,7 @@
 
                            
                  <figure class="img_container__part">
-                                <img src="./imgs/johanahnanice.jpg"
+                                <img src="./imgs/johanajhnanice.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
