--- a/tabor.html
+++ b/tabor.html
@@ -54,7 +54,7 @@
                           </div>
             <p class="section__text">Podrobné informace i fotografie z probíhajících i minulých turnusů najdete zde: </p>
               <div class="year_box year_box--width">
-                <a href="./tabory2024.html#tabory2024" class="year_box__text">Informace a fotogalerie z právě probíhajících turnusů</a>
+                <a href="./tabory2024.html#tabory2024" class="year_box__text">Informace a fotogalerie z letošních turnusů zde</a>
             </div>
             <p class="section__text">Fotky z minulých ročníků najdete zde:</p> 
                 <a href="https://jkvydlakov.rajce.idnes.cz/" class="prize_button prize_button--center">Více fotek zde!</a>
