--- a/tabory2024.html
+++ b/tabory2024.html
@@ -58,7 +58,7 @@
                                                
                 <div class="img_container img_container--center article_news__imgs">                             
                 <figure class="img_container__part">
-                                <img src="./akce_foto/turnus12025tutil.jpg"
+                                <img src="./imgs/turnus12025tutil.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
