--- a/tabory2024.html
+++ b/tabory2024.html
@@ -51,6 +51,7 @@
             <div class="section_article__wrapper">
                 <article class="section_year__article article_news">
                     <h4 class="article_news__heading">Tábor - 30.6. - 4.7.</h4>
+                     <p class="article_news__text">Zahájili jsme letošní prázdniny u koní!! Starat se o nás budou Tinka, Johanka a Majda. </p>
                     <p class="article_news__text">V našem turnusu vítáme 12 holek a 1 kluka. Budeme se věnovat různým jezdeckým disciplínám, z každé se pokusíme naučit aspoň kousek. 
                         Začínáme drezurou, těšíme se i na dostihy či parkur. 
                         A každý den se budeme starat o koně a sem tam si zahrajeme i nějakou nekoňskou hru. </p>
