--- a/tabory2024.html
+++ b/tabory2024.html
@@ -47,7 +47,7 @@
         <h2 class="main__heading main_akce__heading ">Tábory</h2>
          <section id="2021" class="section_year">
             <h3 class="section_year__heading">2025</h3>
-             <p class="section_year__text">Těšíme se na vás!</p>
+             <p class="section_year__text">Informace o jednotlivých turnusech najdete zde.</p>
             <div class="section_article__wrapper">
                 <article class="section_year__article article_news">
                     <h4 class="article_news__heading">Tábor - 30.6. - 4.7.</h4>
