--- a/tabory2024.html
+++ b/tabory2024.html
@@ -87,12 +87,15 @@
                 </article>
                 <article class="section_year__article article_news">
                     <h4 class="article_news__heading">Tábor - 14.7. - 18.7.</h4>
-                    <p class="article_news__text"> Turnus ještě nezačal. </p>
-                     
-                         <p class="article_news__text">   </p>
+                    <p class="article_news__text"> Třetí turnus začal a do akce s námi jdou Eliška, Lucka a Anetka. </p>
+
+                     <p class="article_news__text">Náš turnus je cestovatelský po Fantasy zeměkouli. Každý den navštívíme v naší fantazii jinou zemi. 
+                         A do toho samozřejmě lonžujeme, čistíme, kydáme, svačíme, hrajeme hry a nechce se nám domů. </p>
+                     <p class="article_news__text"> </p>
+                    
                     <div class="img_container img_container--center article_news__imgs">  
                         <figure class="img_container__part">
-                                <img src="./akce_foto/2024_tabor4titulka.jpg"
+                                <img src="./imgs/titul3turnus.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
