--- a/tabory2024.html
+++ b/tabory2024.html
@@ -95,7 +95,7 @@
                     
                     <div class="img_container img_container--center article_news__imgs">  
                         <figure class="img_container__part">
-                                <img src="./imgs/titul3turnus.jpg"
+                                <img src="./imgs/titul3.turnus.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
