--- a/tabory2024.html
+++ b/tabory2024.html
@@ -104,11 +104,11 @@
                 </article>
                 <article class="section_year__article article_news">
                     <h4 class="article_news__heading">Tábor - 21.7. - 25.7.</h4>
-                    <p class="article_news__text">Turnus ještě nezačal. </p>
+                    <p class="article_news__text">Čtvrtým turnusem koňského tábora nás provedou Tinka, Majda a Verča. </p>
                      <p class="article_news__text"></p>
                      <div class="img_container img_container--center article_news__imgs">                             
                 <figure class="img_container__part">
-                                <img src="./akce_foto/2024_tabor4titulka.jpg"
+                                <img src="./imgs/tabor4titul.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
