--- a/2025.html
+++ b/2025.html
@@ -49,6 +49,22 @@
             <section class="section_year">
                 <h3 class="section_year__heading">2025</h3>
 
+                 <article class="section_year__article article_news">
+                <h4 class="article_news__heading">Zkoušky základního výcviku jezdce - 26.7.2025 v Jičíně </h4>
+                     
+                        <p class="article_news__text">Tuto sobotu jsme vyrazili do Jičína na ZZVJ. V tomto termínu zkoušku úspěšně složila Johanka D. a Anetka se Saulem a Nikolka a Johanka P. s Greenhornem. 
+                            Předvádění, testy a drezurní část probíhala poklidně za příjemného počasí, na parkur se ale spustil příšerný hodinu trvající liják. I tak letošní ZZVJ v Jičíně zvládli všeichni účastníci. 
+                            Děkujeme pořadatelům, trenérkám, zkušebním komisařům a taky našim koním za vydařený den! </p>
+
+                       <div class="img_container article_news__imgs">
+                 <figure class="img_container__part">
+                                <img src="./imgs/zzvj2025.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                            </div>
+                         </article>
+
                   <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Jezdecký den v JK Mira Hnanice - neděle 22.6.2025 </h4>
                      
