--- a/tabory2024.html
+++ b/tabory2024.html
@@ -122,7 +122,11 @@
                 </article>
                 <article class="section_year__article article_news">
                     <h4 class="article_news__heading">Tábor - 4.8. - 8.8.</h4>
-                     <p class="article_news__text">Turnus ještě nezačal. </p>
+                     <p class="article_news__text">Poslední turnus letošních prázdnin je tady. O děti se postarají Krista s Rózou. </p>
+                      
+                     <p class="article_news__text">V posledním turnusu tráví u koní letošní deštivé léto 13 holek a 1 kluk. A mají toho na práci kromě ježdění a her vážně dost. Dozvěděli se totiž, že naše koně chce někdo ukrást....
+                     A tomu prostě musí zabránit!!! </p>
+                    
                      <p class="article_news__text"></p>
                      <figure class="img_container__part">
                                 <img src="./akce_foto/2024_tabor4titulka.jpg"
