--- a/tabory2024.html
+++ b/tabory2024.html
@@ -129,7 +129,7 @@
                     
                      <p class="article_news__text"></p>
                      <figure class="img_container__part">
-                                <img src="./akce_foto/2024_tabor4titulka.jpg"
+                                <img src="./imgs/tabor5_2025.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
