--- a/2025.html
+++ b/2025.html
@@ -53,8 +53,8 @@
                   <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Hobby jezdecké závody v Sobotce - sobota 6.9.2025 </h4>
                      
-                        <p class="article_news__text">Po prázdninové pauze jsme zase zpátky v závodním režimu. Rozcvičily jsme se v Sobotce, kde za naši stáj poprvé závodila Lenka s Isabelou a absolvovaly čistý parkur 60/70cm. 
-                            To se podařilo i Majdě se Saulem a skončila na 5.místě. 
+                        <p class="article_news__text">Po prázdninové pauze jsme zase zpátky v závodním režimu. Rozcvičily jsme se v Sobotce, kde za naši stáj poprvé závodila Lenka s Isabellou a 
+                            absolvovaly čistý parkur 60/70cm. To se podařilo i Majdě se Saulem a skončila na 5.místě. 
                             Dále se zúčastnila Verča s Dambarem, Anetka s Lordem a Johanka s Rockym. Další soutěž byla 70/80 cm, tam jsme všechny přešly s chybou. I přes nepřízeň počasí jsme si závody užily.</p>
 
                        <div class="img_container article_news__imgs">
