--- a/2025.html
+++ b/2025.html
@@ -49,6 +49,21 @@
             <section class="section_year">
                 <h3 class="section_year__heading">2025</h3>
 
+                 <article class="section_year__article article_news">
+                <h4 class="article_news__heading">Jezdecké závody Stará Boleslav - sobota 13.9.2025 </h4>
+                     
+                        <p class="article_news__text">V sobotu jsme navštívili Starou Boleslav, kde jsme se zúčastnili prvního parkuru stupně ZZ 80cm na limitovaný čas. 
+                            Startovala Krista s Greenhornem a po bezchybném průběhu skončili na 14.místě. S Aquabellou startovala Tina a parkur zakončily s jednou chybou.</p>
+
+                       <div class="img_container article_news__imgs">
+                 <figure class="img_container__part">
+                                <img src="./akce_foto/GreenAquaStBol.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                            </div>
+                         </article>
+
                 
                   <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Hobby jezdecké závody v Sobotce - sobota 6.9.2025 </h4>
