--- a/2025.html
+++ b/2025.html
@@ -48,6 +48,21 @@
         <section id="2025" class="section_year">
             <section class="section_year">
 
+                 <article class="section_year__article article_news">
+                <h4 class="article_news__heading">Jezdecký den ve stáji LeoCam Strenice - sobota 21.9.2025 </h4>
+                     
+                        <p class="article_news__text">V sobotu jsme navštívili stáj LeoCam, kde si poprvé závodní atmosféru vyzkoušely Kačka se Soranem a Sofča s Rockym. Jezdecký den byl povedený a s účastí jsme spokojeny. </p>
+
+                       <div class="img_container article_news__imgs">
+                 <figure class="img_container__part">
+                                <img src="./akce_foto/kackasofca.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                            </div>
+                         </article>
+
+
                 <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Zkoušky základního výcviku jezdce - 14.9.2025 v Hnanicích</h4>
                      
