--- a/2025.html
+++ b/2025.html
@@ -48,6 +48,21 @@
         <section id="2025" class="section_year">
             <section class="section_year">
 
+                  <article class="section_year__article article_news">
+                <h4 class="article_news__heading">Oslava ve stáji Vydlákov - sobota 21.9.2025 </h4>
+                     
+                        <p class="article_news__text">V sobotu odpoledne jsme ještě stihli oslavu 100. narozenin - zasvěcení vědí. Frantovi a Bobešovi děkujeme a přejeme všechno nejlepší do
+                        dalších let. </p>
+
+                       <div class="img_container article_news__imgs">
+                 <figure class="img_container__part">
+                                <img src="./akce_foto/frantabobes100.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                            </div>
+                         </article>
+
                  <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Jezdecký den ve stáji LeoCam Strenice - sobota 21.9.2025 </h4>
                      
