--- a/2025.html
+++ b/2025.html
@@ -52,8 +52,8 @@
                     <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Jezdecký den v Hnanicích - neděle 5.10.2025 Hnanice </h4>
                      
-                        <p class="article_news__text">V neděli proběhly poslední letošní závody, kteréch se jezdkyně naší stáje zúčastnily. 
-                            Odjeli jsme do Hnanic, kde startovaly tyto dvojice - Majda a Saul v parkurech 70/80cm a 90cm oboje s následným rozeskakování a Anetka s Lordem, 
+                        <p class="article_news__text">V neděli proběhly poslední letošní závody, kterých se jezdkyně naší stáje zúčastnily. 
+                            Odjeli jsme do Hnanic, kde startovaly tyto dvojice - Majda a Saul v parkurech 70/80cm a 90cm oboje s následným rozeskakováním a Anetka s Lordem, 
                             Johanka s Rockym a Nikča se Zorrem v parkurech 50/60cm na limitovaný čas a 70/80cm s následným rozeskakováním. 
                             Všechny holky si vezou mašli, Zorro dokonce zlatou. To je přece pěkný závěr sezóny, co myslíte?  </p>
 
