--- a/2025.html
+++ b/2025.html
@@ -53,7 +53,8 @@
                 <h4 class="article_news__heading">Hubertova jízda stáje Vydlákov - sobota 18.10.2025</h4>
                      
                         <p class="article_news__text">V sobotu jsme pořádali třetí ročník naší Hubertovy jízdy. Sešlo se 13 dvojic a vyrazili jsme na vyjížďku plnou skoků. Počasí nám přálo, Huberta jsme si užili. 
-                            Fotogalerii připravujeme.</p>
+                            </p>
+                         <a href="https://https://eu.zonerama.com/JSVydlakovakce/Album/14042607#check-duplicates" class="prize_button prize_button--center">Fotky naleznete zde!</a>
 
 
                 
