--- a/2025.html
+++ b/2025.html
@@ -54,7 +54,7 @@
                      
                         <p class="article_news__text">V sobotu jsme pořádali třetí ročník naší Hubertovy jízdy. Sešlo se 13 dvojic a vyrazili jsme na vyjížďku plnou skoků. Počasí nám přálo, Huberta jsme si užili. 
                             </p>
-                         <a href="https://https://eu.zonerama.com/JSVydlakovakce/Album/14042607#check-duplicates" class="prize_button prize_button--center">Fotky naleznete zde!</a>
+                         <a href="https://eu.zonerama.com/JSVydlakovakce/Album/14042607#check-duplicates" class="prize_button prize_button--center">Fotky naleznete zde!</a>
 
 
                 
