--- a/2025.html
+++ b/2025.html
@@ -58,7 +58,7 @@
                         
                          <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
-                                <img src="./akce_foto/hubert2025.jpg"
+                                <img src="./akce_foto/fotohubert2025.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
