--- a/2025.html
+++ b/2025.html
@@ -62,10 +62,29 @@
 
                       <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
-                                <img src="./akce_foto/fotohubert2025.jpg"
+                                <img src="./akce_foto/maskarni2025sofi.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
+                          div class="img_container article_news__imgs">
+                 <figure class="img_container__part">
+                                <img src="./akce_foto/maskarni2025tina.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                          div class="img_container article_news__imgs">
+                 <figure class="img_container__part">
+                                <img src="./akce_foto/maskarni2025medvidekpu.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                          div class="img_container article_news__imgs">
+                 <figure class="img_container__part">
+                                <img src="./akce_foto/maskarni2025krista.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                          
                                 </div>
                          </article>
                         
