--- a/kone.html
+++ b/kone.html
@@ -70,6 +70,22 @@
                             onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                 </div>
+
+                 <div class="section_cards__card card">
+                    <div class="card_top">
+                        <p class="card_top__jmeno">Kornelius</p>
+                        <p class="card_top__datum card_top_text"><span class="card_top_text--bold">Datum
+                                narození:</span> 12.5.2025</p>
+                        <p class="card_top__plemeno card_top_text"><span class="card_top_text--bold">Plemeno:</span>
+                            bude doplněno</p>
+                        <p class="card_top__otec card_top_text"><span class="card_top_text--bold">Otec:</span> Cool Paradise</p>
+                        <p class="card_top__matka card_top_text"><span class="card_top_text--bold">Matka:</span>
+                            Karola</p>
+                             <figure class="img_kone__wrapper">
+                        <img alt="Fotografie flekatého hříběte"
+                            src="./imgs/Korny.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
+                    </figure>
+                        
                 <div class="section_cards__card card">
                     <div class="card_top">
                         <p class="card_top__jmeno">Saul</p>
