--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                       <p class="section__text section__text--border">PF 2026.    
                 </p>  
                    <figure class="section__img img_wrapper">
-                    <img class="img_wrapper__item" src="./imgs/pf2026.jpg"
+                    <img class="img_wrapper__item" src="./imgs/pf2026.jpeg"
                         alt="PF se skupinou jezdců na koních na zasněžené louce">
                 </figure>
                 </article>
