--- a/kone.html
+++ b/kone.html
@@ -83,7 +83,7 @@
                             Karola</p>
                              <figure class="img_kone__wrapper">
                         <img alt="Fotografie flekatého hříběte"
-                            src="./imgs/Korny.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
+                            src="./imgs/Korny.jpeg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                         
                 <div class="section_cards__card card">
