--- a/kone.html
+++ b/kone.html
@@ -78,7 +78,7 @@
                                 narození:</span> 12.5.2025</p>
                         <p class="card_top__plemeno card_top_text"><span class="card_top_text--bold">Plemeno:</span>
                             bude doplněno</p>
-                        <p class="card_top__otec card_top_text"><span class="card_top_text--bold">Otec:</span> Cool Paradise</p>
+                        <p class="card_top__otec card_top_text"><span class="card_top_text--bold">Otec:</span> 1478 Cool Paradise</p>
                         <p class="card_top__matka card_top_text"><span class="card_top_text--bold">Matka:</span>
                             Karola</p>
                             </div>
