--- a/kone.html
+++ b/kone.html
@@ -85,7 +85,7 @@
                      
                              <figure class="img_kone__wrapper">
                         <img alt="Fotografie flekatého hříběte"
-                            src="./imgs/korny.jpeg" onclick="this.classList.toggle('workingImage'); openImg();" />
+                            src="./imgs/korny1.jpeg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                             </div>
                 
