--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <section class="section main__section">
                 <h3 class="section__heading section__heading_main section__heading--absolute">Poloha</h3>
                 <p class="section__text section__text--border">Naše stáj se nachází jen sedm minut od centra Liberce, v ulici Pod Strání 131 Stráž nad Nisou, na okraji průmyslové zóny Sever a nedaleko obchodního centra 
-                    Globus. Stáj je dostupná i MHD (autobusová linka č. 14, č. 27, č. 600 zastávka Globus nebo Obchodní).</p>
+                    Globus. Stáj je dostupná i MHD (autobusová linka č. 14, č. 27 - zastávka Obchodní, č. 600 - zastávka Globus).</p>
                 <div class="section__map">
                     <iframe style="border:none" src="https://frame.mapy.cz/s/jocomucora" frameborder="0"></iframe>  
                 </div>
