--- a/2025.html
+++ b/2025.html
@@ -49,7 +49,7 @@
             <section class="section_year">
 
                  <article class="section_year__article article_news">
-                <h4 class="article_news__heading">Poslední příspěvek roku 2025 aneb nějak nám to miminko vyrostlo...</h4>
+                <h4 class="article_news__heading">Poslední příspěvek letošního roku aneb nějak nám to miminko vyrostlo...</h4>
 
                        <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
