--- a/cenik.html
+++ b/cenik.html
@@ -111,7 +111,7 @@
                         <div class="table__item table__item--right"> 210,-/kus</div>
 
                         <div class="table__item">desinfekce k praní</div>
-                        <div class="table__item table__item--right">+ 120,-/kus</div>
+                        <div class="table__item table__item--right"> 120,-/kus</div>
 
                         <div class="table__item">odchlupení</div>
                         <div class="table__item table__item--right"> 200,-/kus</div>
