--- a/cenik.html
+++ b/cenik.html
@@ -107,7 +107,7 @@
                         <div class="table__item">drobnosti (čabraka, rajtky, kamaše, atd.)</div>
                         <div class="table__item table__item--right">100,-/kus</div>
                 
-                        <div class="table__item">impregnace k praní</div>
+                        <div class="table__item">impregnace k<p style="color: white;">_</p>praní</div>
                         <div class="table__item table__item--right"> 210,-/kus</div>
 
                         <div class="table__item">desinfekce k<p style="color: white;">_</p>praní</div>
