--- a/akce.html
+++ b/akce.html
@@ -48,6 +48,9 @@
          
         <div class="select_year">
              <div class="year_box">
+                <a href="2026.html#2026" class="year_box__text">2026</a>
+             </div>
+             <div class="year_box">
                 <a href="2025.html#2025" class="year_box__text">2025</a>
              </div>
             <div class="year_box">
