--- a/2026.html
+++ b/2026.html
@@ -50,7 +50,7 @@
             <section class="section_year">
 
                  <article class="section_year__article article_news">
-                <h4 class="article_news__heading">Poslední příspěvek letošního roku aneb nějak nám to miminko vyrostlo...</h4>
+                <h4 class="article_news__heading">Skok do nového roku - 1.1.2026</h4>
 
                        <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
