--- a/2026.html
+++ b/2026.html
@@ -49,6 +49,71 @@
         <section id="2026" class="section_year">
             <section class="section_year">
 
+                  <article class="section_year__article article_news">
+                <h4 class="article_news__heading">Bobování - 1.1.2026</h4>
+
+                       <div class="img_container article_news__imgs">
+                 <figure class="img_container__part">
+                                <img src="./imgs/bobovani/bobovani1.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                             <figure class="img_container__part">
+                                <img src="./imgs/bobovani/bobovani2.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                           <figure class="img_container__part">
+                                <img src="./imgs/bobovani/bobovani3.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                           <figure class="img_container__part">
+                                <img src="./imgs/bobovani/bobovani4.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                           <figure class="img_container__part">
+                                <img src="./imgs/bobovani/bobovani5.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                           <figure class="img_container__part">
+                                <img src="./imgs/bobovani/bobovani6.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                           </figure>    
+                           <figure class="img_container__part">
+                                <img src="./imgs/bobovani/bobovani7.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                           </figure>   
+                           <figure class="img_container__part">
+                                <img src="./imgs/bobovani/bobovani8.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                           </figure>   
+                           <figure class="img_container__part">
+                                <img src="./imgs/bobovani/bobovani9.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                           </figure>  
+                           <figure class="img_container__part">
+                                <img src="./imgs/bobovani/bobovani10.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                           </figure>   
+                           <figure class="img_container__part">
+                                <img src="./imgs/bobovani/bobovani11.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                           </figure>   
+
+                           
+                 
+                        </div>
+                         </article>       
+
                  <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Skok do nového roku - 1.1.2026</h4>
 
