--- a/2026.html
+++ b/2026.html
@@ -50,7 +50,9 @@
             <section class="section_year">
 
                   <article class="section_year__article article_news">
-                <h4 class="article_news__heading">Bobování - 1.1.2026</h4>
+                <h4 class="article_news__heading">Bobování - neděle 4.1.2026</h4>
+                        <p class="article_news__text">Napadl sníh a hned jsme vyrazili bobovat. A zkusili jsme i sjezdovky. V roli tahounů se skvěle osvědčili Zorro a Isabella.  </p>
+
 
                        <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
