--- a/tabor.html
+++ b/tabor.html
@@ -99,8 +99,8 @@
             <h3 class="section__heading section__heading--red">Ceny a platební informace:</h3>
             <ul class="section__list list_tabor">
                 <li class="list_tabor__item ">5800,-/turnus (1 dítě)</li>
-                <li class="list_tabor__item">platba musí být provedena do <span
-                        class="list_tabor__item--bold">11.6.2025, po dohodě i později </span></li>
+                <li class="list_tabor__item">platba zálohy ve výši 2000,- musí být provedena do <span
+                        class="list_tabor__item--bold">do 7 dnů po přijetí přihlášky </span> doplatek ve výši 3800,- nejpozději 7 dnů před začátkem turnusu.</li> 
                 <li class="list_tabor__item">způsoby platby:</li>
                 <li class="list_tabor__item list_tabor__payment">hotově přímo ve stáji</li>
                 <li class="list_tabor__item list_tabor__payment"><span class="list_tabor__item--block">převodem na účet:</span> <span
