--- a/tabor.html
+++ b/tabor.html
@@ -100,7 +100,7 @@
             <ul class="section__list list_tabor">
                 <li class="list_tabor__item ">5800,-/turnus (1 dítě)</li>
                 <li class="list_tabor__item">platba zálohy ve výši 2000,- musí být provedena do <span
-                        class="list_tabor__item--bold">do 7 dnů po přijetí přihlášky </span> doplatek ve výši 3800,- </span>nejpozději 7 dnů před začátkem turnusu.</li> 
+                        class="list_tabor__item--bold">do 7 dnů po přijetí přihlášky, doplatek ve výši 3800,-nejpozději 7 dnů před začátkem turnusu.</li> 
                 <li class="list_tabor__item">způsoby platby:</li>
                 <li class="list_tabor__item list_tabor__payment">hotově přímo ve stáji</li>
                 <li class="list_tabor__item list_tabor__payment"><span class="list_tabor__item--block">převodem na účet:</span> <span
@@ -109,7 +109,7 @@
             </ul>
         </section>
         <section class="section section_tabor section--line">
-            <h3 class="section__heading section__heading--red">Turnusy 2025:</h3>
+            <h3 class="section__heading section__heading--red">Turnusy 2026:</h3>
             <ol class="section__list list_tabor order_list" start="">
                 <li class="order_list__item list_tabor__item">6.7. - 10.7.</li>
                 <li class="order_list__item list_tabor__item">13.7. - 17.7.</li>
