--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
 
              <section class="section main__section">
                 <h3 class="section__heading section__heading_main section__heading--absolute">Akce pro veřejnost</h3>
+
+                 
+                      <p class="section__text section__text--border">Spuštěno přihlašování na letošní příměstské tábory</p>  
+                   <figure class="section__img img_wrapper">
+                    <img class="img_wrapper__item" src="./imgs/tabor2026.jpeg"
+                        alt="letak na primestsky tabor">
+                   </figure>
+                </article>
+                 
                       <p class="section__text section__text--border">PF 2026.</p>  
                    <figure class="section__img img_wrapper">
                     <img class="img_wrapper__item" src="./imgs/pf2026.jpeg"
