--- a/tabor.html
+++ b/tabor.html
@@ -67,7 +67,7 @@
             <h3 class="section__heading section__heading--red">Základní informace:</h3>
             <ul class="section__list list_tabor">
                 <li class="list_tabor__item">Tábory jsou organizovány po týdenních turnusech (pondělí až pátek),</li>
-                <li class="list_tabor__item">každý den začíná v 9:00 a končí v 16:00 v areálu naší stáje.
+                <li class="list_tabor__item">každý den začíná v 7:00 a končí v 16:00 v areálu naší stáje.
                     Adresa: Pod Strání 131, Stráž nad Nisou, mapka je v úvodu.
                 <li class="list_tabor__item">Během dne se děti učí péči o koně, jízdě na koních a vše co se koní týče,
                 </li>
@@ -100,7 +100,7 @@
             <ul class="section__list list_tabor">
                 <li class="list_tabor__item ">5800,-/turnus (1 dítě)</li>
                 <li class="list_tabor__item"> <span
-                        class="list_tabor__item--bold">platba zálohy ve výši 2000,- musí být provedena  do 7 dnů po přijetí přihlášky, doplatek ve výši 3800,-nejpozději 7 dnů před začátkem turnusu.</li> 
+                        class="list_tabor__item--bold">platba zálohy ve výši 2000,- musí být provedena  do 7 dnů po přijetí přihlášky, doplatek ve výši 3800,-nejpozději 7 dnů před začátkem turnusu. Záloha je nevratná.</li> 
                 <li class="list_tabor__item">způsoby platby:</li>
                 <li class="list_tabor__item list_tabor__payment">hotově přímo ve stáji</li>
                 <li class="list_tabor__item list_tabor__payment"><span class="list_tabor__item--block">převodem na účet:</span> <span
