--- a/tabor.html
+++ b/tabor.html
@@ -121,8 +121,8 @@
         <section class="section section_tabor section--line">
             <h3 class="section__heading section__heading--red">Způsoby přihlášení dítěte:</h3>
             <ul class="section__list list_tabor">
-                <li class="list_tabor__item">Osobním odevzdáním vyplněné přihlášky ve stáji + platba zálohy a doplatku</li>
-                <li class="list_tabor__item">zasláním elektronickou poštou na e-mail a zaplacením platby zálohy a doplatku převodem na účet</li>
+                <li class="list_tabor__item">Osobním odevzdáním vyplněné přihlášky ve stáji + platba nevratné zálohy a doplatku</li>
+                <li class="list_tabor__item">zasláním elektronickou poštou na e-mail a platna nevratné zálohy a doplatku převodem na účet</li>
             </ul>
             <a class="prize_button prize_button--center" href="mailto:langos88@seznam.cz">zaslat e-mail</a>
         </section>
