--- a/tabor.html
+++ b/tabor.html
@@ -43,7 +43,7 @@
     <main id="tabor" class="main">
         <section class="section section_tabor">
             <h2  class="section__heading">Příměstský tábor 2026</h2>
-            <p class="section__text">Právě jsme spustili přihlašování na letošní příměstské tábory u koní. Letní prázdniny u nás baví vždycky! </p>  
+            <p class="section__text">Právě jsme spustili přihlašování na letošní příměstské tábory u koní. Letní prázdniny u nás baví vždycky už několik let! </p>  
            
               <div class="section__img img_wrapper">
                  <figure class="img_container__part">
