--- a/tabor.html
+++ b/tabor.html
@@ -68,7 +68,7 @@
             <ul class="section__list list_tabor">
                 <li class="list_tabor__item">Tábory jsou organizovány po týdenních turnusech (pondělí až pátek),</li>
                 <li class="list_tabor__item">každý den začíná v 8:00 a končí v 16:00 v areálu naší stáje.
-                    Adresa stáje je: ulice Pod Strání 131, Stráž nad Nisou, mapka je v úvodu. nacházíme se nedaleko průmyslové zóny u OC Globus.
+                    Adresa stáje je: ulice Pod Strání 131, Stráž nad Nisou, mapka je v úvodu. Nacházíme se nedaleko průmyslové zóny u OC Globus.
                 <li class="list_tabor__item">Během dne se děti učí péči o koně, jízdě na koních a vše co se koní týče,
                 </li>
                 <li class="list_tabor__item">maximální kapacita je 12 míst pro jeden turnus (minimálně musí být obsazeno
