--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                 <h3 class="section__heading section__heading_main section__heading--absolute">Akce pro veřejnost</h3>
 
                  
-                      <p class="section__text section__text--border">Spuštěno přihlašování na letošní příměstské tábory.</p>  
+                      <p class="section__text section__text--border">Právě bylo spuštěno přihlašování na letošní příměstské tábory. Abychom vyslyšeli přání rodičů, budeme letos rozdělovat platbu za tábor na dvě části. 
+                          Záloha 2000,- je nevratná a splatná do 7 dnů po přihlášení dítěte. Doplatek 3800,- je splatný nejpozději týden před začátkem turnusu.</p>  
                    <figure class="section__img img_wrapper">
                     <img class="img_wrapper__item" src="./imgs/tabor2026.jpeg"
                         alt="letak na primestsky tabor">
