--- a/tabor.html
+++ b/tabor.html
@@ -43,7 +43,7 @@
     <main id="tabor" class="main">
         <section class="section section_tabor">
             <h2  class="section__heading">Příměstský tábor 2026</h2>
-            <p class="section__text">Právě jsme spustili přihlašování na letošní příměstské tábory u koní. Letní prázdniny u nás baví vždycky už několik let!  Abychom vyslyšeli přání rodičů, budeme letos 
+            <p class="section__text">Právě jsme spustili přihlašování na letošní příměstské tábory u koní. Abychom vyslyšeli přání rodičů, budeme letos 
                 rozdělovat platbu za tábor na dvě části. Záloha 2000,- je nevratná a splatná do 7 dnů po přihlášení dítěte. Doplatek 3800,- je splatný nejpozději týden před začátkem turnusu. </p>  
            
               <div class="section__img img_wrapper">
