--- a/cenik.html
+++ b/cenik.html
@@ -83,7 +83,7 @@
                     <div class="table__item">Řidič a tažné vozidlo</div>
                     <div class="table__item table__item--right">17,-/km</div>
                     <div class="table__item">Čekací doba na místě</div>
-                    <div class="table__item table__item--right">1 hodina 100,- Kč</div>
+                    <div class="table__item table__item--right">1 hod. 100,- Kč</div>
                      <div class="table">
                      <div class="table__item">Naložení a vyložení koně do 60 minut je v ceně dopravy.</div>
                 </div>
