--- a/sluzby.html
+++ b/sluzby.html
@@ -117,6 +117,26 @@
                 </figure>
                 </div>
             </section>
+
+               </section>
+            <section class="section section_prani vybaveni">
+                <h3 class="section__heading section__heading--absolute">Praní jezdeckého vybavení</h3>
+                <p class="section__text section__text--border">Více informací najdete v ceníku.
+                </p>
+                <div class="img_container_500">
+               
+                   <figure class="section__img frame"><a class="img_wrapper"><img class="frame__item"
+                            src="./imgs/narozeniny2.jpg" alt="dětská oslava, vodění na poníkovi"></a>
+                    <figcaption></figcaption>
+                </figure>
+                   <figure class="section__img frame"><a class="img_wrapper"><img class="frame__item"
+                            src="./imgs/narozeniny3.jpg" alt="dětská oslava, vodění na poníkovi"></a>
+                    <figcaption></figcaption>
+                </figure>
+                </div>
+            </section>
+
+            
         </div>
     </main>
     <footer class="footer">
